# peripherals-key

./: CMakeLists.txt  NOTICE  README.md
src/: key.c
test/: test_key.c
